add scss features

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 
         <!-- faqs -->
         <section class="questions section" id="faqs">
-            <h2 class="section__title-center questions__title container">
+            <h2 class="section__title--center questions__title container">
                 Some common questions <br> were often asked
             </h2>
 
@@ -460,8 +460,8 @@
                 <h3 class="footer__title">Our Address</h3>
 
                 <ul class="footer__data">
-                    <li class="footer__information">1234 - Peru</li>
-                    <li class="footer__information">La Libertad - 43210</li>
+                    <li class="footer__information">1234 - Iran</li>
+                    <li class="footer__information">Tehran - 43210</li>
                     <li class="footer__information">123-456-789</li>
                 </ul>
             </div>
